--- a/preambule.tex
+++ b/preambule.tex
@@ -3,12 +3,14 @@
 \usepackage[T1]{fontenc}
 \usepackage[french]{babel}
 \usepackage{amsmath}
+\usepackage{ amssymb }
 \usepackage{titlesec}
 \usepackage{tocloft}
 \usepackage{multicol}
 \usepackage{graphicx}
 \usepackage{xcolor}
 \usepackage{lipsum}
+\usepackage{float}
 
 \usepackage{hyperref}
 
@@ -39,6 +41,7 @@
 \usepackage[font=small,labelfont=bf,width=0.5\textwidth]{caption}
 \usepackage{wrapfig}
 \usepackage{subcaption}
+\usepackage[bottom]{footmisc}
 
 % Style de numérotation
 \numberwithin{equation}{section}
